oic-docker/k8s/wls-admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wls
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wls-admin
  namespace: wls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wls-admin
  template:
    metadata:
      labels:
        app: wls-admin
        tenant: t1
    spec:
      serviceAccountName: wls
      containers:
      - name: wls-admin
        image: phx.ocir.io/oicpaas1/sumagant/wls-domain:12.2.1.3
        imagePullPolicy: Always
      imagePullSecrets:
      - name: k8s-pull
---
apiVersion: v1
kind: Service
metadata:
  name: wls-admin
  namespace: wls
spec:
  selector:
    app: wls-admin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wls-admin
  namespace: wls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-redirect: default
spec:
  rules:
  - http:
      paths:
      - path: /wls-admin
        backend:
          serviceName: wls-admin
          servicePort: 80
